--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,24 @@
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    margin: 0;
+    font-family: Roboto, sans-serif;
+}
+
+md-card {
+    max-width: 80%;
+    margin: 2em auto;
+    text-align: center;
+}
+
+md-toolbar-row {
+    justify-content: space-between;
+}
+
+.done {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
