--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,26 +1,38 @@
+<br>
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-1 col-md-offset-2">
-    <form action="">
+    <!-- [formGroup] := Directive applied to whole form  -->
+    <!-- form := Controller variable. [formGroup] is binded to it -->
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
       <div class="form-group">
-        <label for="firstName">Vorname</label>
-        <input type="text" class="form-control" id="firstName" required>
+        <label>Vorname</label>
+        <!-- if there is no FormGroup, the Directive would be formControl instead of formControlName  -->
+        <input type="text" class="form-control" formControlName="firstName">        
       </div>
       <div class="form-group">
-        <label for="lastName">Nachname</label>
-        <input type="text" class="form-control" id="lastName" required>
+        <label>Nachname</label>
+        <input type="text" class="form-control" formControlName="lastName">
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" aria-describedby="emailHelp" required>
+        <label>Email</label>
+        <input type="email" class="form-control" formControlName="email" email>        
       </div>
-      <div class="form-group">
-        <label for="gender">Geschlecht</label>
-        <select name="gender" id="gender" class="form-control">
-          <option value="">Männlich</option>
-          <option value="">Weiblich</option>
-        </select>
-      </div>
-      <button class="btn btn-primary">Senden</button>
+       <div class="form-group">
+          <label for="gender">Geschlecht</label>
+          <select name="gender" id="gender" class="form-control" formControlName="gender">
+            <option value="male">Männlich</option>
+            <option value="female">Weiblich</option>
+          </select>
+        </div>  
+      <button class="btn btn-primary" type="submit">Senden</button>
+      <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button>
     </form>
+
+    <br>
+    <p>Form value: {{ form.value | json }}</p>
+    <p>Form status: {{ form.status | json }}</p> 
+
+
+
   </div>
 </div>
