--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,14 +1,20 @@
-  <div class="container">  
+<br>
+<div class="container">
   <div class="row">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
+
       <div class="list-group">
-        <a class="list-group-item list-group-item-action"
-        *ngFor="let player of (playersList | sortPlayers); let i = index"
-        [routerLink]="['/players', i, 'detail']">
-      {{ player.firstName }} {{ player.lastName }}</a>
+          <div
+            class="d-flex w-100 justify-content-between"
+            *ngFor="let player of players | async | sortPlayers">
+            <h5><span class="label label-primary">{{ player.rank }}</span></h5>
+            <h5>{{ player.firstName }} {{ player.lastName }}</h5>
+            <a [routerLink]="['/players','detail']" (click)="onDetail(player)"><i class="fa fa-eye"></i></a>
+          </div>
       </div>
+
     </div>
     <div class="col-sm-2"></div>
   </div>
-</div>  
+</div>
