--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,3 @@
-<a routerLink="players/0">Link</a>
+<div class="container-fluid text-center bg-logo">
+  <h3>Willkommen bei der Ranglisten-App der Badminton Spieler von</h3>
+</div>
