--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,38 +1,32 @@
-<br>
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-1 col-md-offset-2">
-    <!-- [formGroup] := Directive applied to whole form  -->
-    <!-- form := Controller variable. [formGroup] is binded to it -->
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
-      <div class="form-group">
-        <label>Vorname</label>
-        <!-- if there is no FormGroup, the Directive would be formControl instead of formControlName  -->
-        <input type="text" class="form-control" formControlName="firstName">        
-      </div>
-      <div class="form-group">
-        <label>Nachname</label>
-        <input type="text" class="form-control" formControlName="lastName">
-      </div>
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" class="form-control" formControlName="email" email>        
-      </div>
-       <div class="form-group">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-10 col-sm-10 col-md-7 col-lg-5">
+      <!-- [formGroup] := Directive applied to whole form  -->
+      <!-- form := Controller variable. [formGroup] is binded to it -->
+      <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
+        <div class="form-group">
+          <label>Vorname</label>
+          <!-- if there is no FormGroup, the Directive would be formControl instead of formControlName  -->
+          <input type="text" class="form-control" formControlName="firstName">
+        </div>
+        <div class="form-group">
+          <label>Nachname</label>
+          <input type="text" class="form-control" formControlName="lastName">
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" formControlName="email" email>
+        </div>
+        <div class="form-group">
           <label for="gender">Geschlecht</label>
           <select name="gender" id="gender" class="form-control" formControlName="gender">
             <option value="male">Männlich</option>
             <option value="female">Weiblich</option>
           </select>
-        </div>  
-      <button class="btn btn-primary" type="submit">Senden</button>
-      <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button>
-    </form>
-
-    <br>
-    <p>Form value: {{ form.value | json }}</p>
-    <p>Form status: {{ form.status | json }}</p> 
-
-
-
+        </div>
+        <button class="btn btn-primary" type="submit">Senden</button>
+        <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button>
+      </form>
+    </div>
   </div>
 </div>
