--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable navbar-light navbar-inverse bg-inverse flex-row">
+<nav class="navbar navbar-toggleable navbar-light bg-faded flex-row">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">
           <a class="dropdown-item" routerLink="signin"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Anmelden</a>
           <a class="dropdown-item" routerLink="signup"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren</a>
+          <a class="dropdown-item" routerLink="admin"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Admin</a>
         </div>
       </li>
     </ul>
