--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,20 +1,32 @@
-<br>
-<div class="container">
+<div class="container py-3">
   <div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8">
-
-      <div class="list-group">
-          <div
-            class="d-flex w-100 justify-content-between"
-            *ngFor="let player of players | async | sortPlayers">
-            <h5><span class="label label-primary">{{ player.rank }}</span></h5>
-            <h5>{{ player.firstName }} {{ player.lastName }}</h5>
-            <a [routerLink]="['/players','detail']" (click)="onDetail(player)"><i class="fa fa-eye"></i></a>
-          </div>
-      </div>
-
+    <div class="col cs-12 col-sm-12 col-md-8">
+      <h5 class="text-center" *ngIf="gender === 'men'">Rangliste Männer</h5>
+      <h5 class="text-center" *ngIf="gender === 'women'">Rangliste Frauen</h5>
     </div>
-    <div class="col-sm-2"></div>
+  </div>
+
+  <div class="row py-2">
+    <div class="col-xs-12 col-sm-12 col-md-8">
+      <table class="table table-striped table-hover table-sm">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Vorname</th>
+            <th>Nachname</th>
+            <th>Gefordert</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let player of players | async | sortPlayers" class="table-row" style="cursor: pointer">
+            <th scope="row">{{ player.rank }}</th>
+            <td>{{ player.firstName }}</td>
+            <td>{{ player.lastName }}</td>
+            <td>nein</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
   </div>
 </div>
