Enabled User Authentification based on Firebase and AngularFire2

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,12 +1,9 @@
-<div class="container">
+ <div class="container">
   <div class="row">
     <div class="col-xs-10 col-sm-10 col-md-7 col-lg-5">
-      <!-- [formGroup] := Directive applied to whole form  -->
-      <!-- form := Controller variable. [formGroup] is binded to it -->
       <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
         <div class="form-group">
-          <label>Vorname</label>
-          <!-- if there is no FormGroup, the Directive would be formControl instead of formControlName  -->
+          <label>Vorname</label>          
           <input type="text" class="form-control" formControlName="firstName">
         </div>
         <div class="form-group">
@@ -24,9 +21,9 @@
             <option value="female">Weiblich</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Senden</button>
-        <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button>
+        <button class="btn btn-success" type="submit">Senden</button>
+        <button class="btn btn-primary" type="button" (click)="onReset()">Reset</button>
       </form>
     </div>
   </div>
-</div>
+</div> 
