--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -12,7 +12,7 @@
       <button class="btn btn-primary btn-sm" (click)="onFemale()" [disabled]="gender==='Frauen'">Frauen</button>
     </div>
   </div> -->
-  <div class="text-center">
+  <div>
     <label class="custom-control custom-radio">
     <input type="radio" id="male" name="radio" class="custom-control-input" (click)="onMale()" checked="checked">
     <span class="custom-control-indicator"></span>
