--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,3 +1,23 @@
-<p>
-  signin works!
-</p>
+<div class="container">
+  <form #signinForm="ngForm">
+    <div *ngIf="!(user | async)" class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email">
+      <label>Passwort</label>
+      <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Passwort" aria-describedby="help">
+      <small id="help" class="form-text text-muted">Nach dem Einloggen/Registrieren gelangst Du zu Deinem persönlichen Profil.</small>
+      <br>
+      <button (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary">Login</button>
+      <button (click)="onSignup()" [disabled]="!email || !password" class="btn btn-primary">Registrieren</button>
+    </div>
+    <div *ngIf="user | async" class="form-group">
+      <h5>Willkommen {{ (user | async)?.email }}!</h5><br>
+      <h5>Deine UID: {{ (user | async)?.uid }}</h5><br>    
+      <button (click)="onLogout()" class="btn btn-danger">Logout</button>
+      <!-- <br> -->
+      <!-- <input type="text" class="form-control" [(ngModel)]="name" name="name" placeHolder="Namen ändern"> -->
+      <!-- <button (click)="onUpdateName()" [disabled]="!name">Update Name</button> -->
+      <!-- <p>Neuer Name: {{ player.name | async }}</p> -->
+    </div>
+  </form>
+</div>
