--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -14,7 +14,8 @@
             <th>#</th>
             <th>Vorname</th>
             <th>Nachname</th>
-            <th>Gefordert</th>
+            <th>Gefodert</th>
+            <th>Neutral.</th>
           </tr>
         </thead>
         <tbody>
@@ -22,7 +23,8 @@
             <th scope="row">{{ player.rank }}</th>
             <td>{{ player.firstName }}</td>
             <td>{{ player.lastName }}</td>
-            <td>nein</td>
+            <td class="text-center"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></td>
+            <td class="text-center"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></td>
           </tr>
         </tbody>
       </table>
