--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="container py-3">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8">
-
-
+    <div class="col"></div>
+    <div class="col-10 col-sm-10 col-md-10 col-lg-7">
 
       <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -14,18 +13,18 @@
       </ul>
       <br>
 
-
-
       <div class="tab-content">
-        <div class="tab-pane active fade in show" id="home">
-          <h5>Ranglisten App (Beta)</h5>
+
+        <div class="tab-pane text-center active fade in show" id="home">
+          <h5>Badminton-Vereinsrangliste Rot-Weiss Walldorf</h5>
+          <img src="../../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo">
           <hr>
-          <h5>TODOs:</h5>
+          <h5>Verwendete Technologien:</h5>
           <ol class="list-group">
-            <li class="list-group-item">Forderungssystem</li>
-            <li class="list-group-item">Benutzer-Authentifizierung</li>
-            <li class="list-group-item">Statistiken</li>
-            <li class="list-group-item">Layout-Verbesserungen</li>
+            <li class="list-group-item">Angular</li>
+            <li class="list-group-item">Google Firebase</li>
+            <li class="list-group-item">HTML 5</li>
+            <li class="list-group-item">Bootstrap 4</li>
           </ol>
         </div>
 
@@ -34,7 +33,7 @@
           <p>Das Ranglistensystem entspricht einem Tannenbaum und teilt die Ranglistenspieler/-innen in verschiedene Reihen
             ein. In der Reihe 1 steht die Nummer 1, in der Reihe 2 die Nummer 2 und 3, in der Reihe 3 die Nummer 4, 5 und
             6, in der Reihe 4 die Nummer 7, 8, 9 und 10, usw. siehe unten.</p>
-          <img src="http://www.sv-olympia-tennis.de/Grafiken/Rangliste/tbs.PNG" alt="Tannenbaum" class="img-fluid">
+          <img src="../../../assets/images/pyramid.png" alt="Tannenbaum" class="img-fluid">
           <br><br>
           <p>In der Reihe, in die man sich hineingespielt hat, darf man jeden Spieler fordern. Man hat aber auch das Recht,
             in der nächsthöheren Reihe diejenigen zu fordern, die rechts vor einem stehen. Zusätzlich hat der an Nummer 3
@@ -118,5 +117,6 @@
       </div>
 
     </div>
+    <div class="col"></div>
   </div>
 </div>
