--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="container py-3">
   <div class="row">
-    <div class="col cs-12 col-sm-12 col-md-8">
+    <div class="col cs-12 col-sm-12 col-md-8 col-lg-6">
       <h5 class="text-center">Admin-Bereich {{ gender }}</h5>
       <hr>
     </div>
@@ -25,9 +25,8 @@
   </label>
   </div>
 
-
   <div class="row py-3">
-    <div class="col-xs-12 col-sm-12 col-md-8">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
       <table class="table table-striped table-hover table-sm">
         <thead>
           <tr>
