--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,23 +1,35 @@
-<div class="container">
-  <form #signinForm="ngForm">
-    <div *ngIf="!(user | async)" class="form-group">
-      <label>Email</label>
-      <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email">
-      <label>Passwort</label>
-      <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Passwort" aria-describedby="help">
-      <small id="help" class="form-text text-muted">Nach dem Einloggen/Registrieren gelangst Du zu Deinem persönlichen Profil.</small>
-      <br>
-      <button (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary">Login</button>
-      <button (click)="onSignup()" [disabled]="!email || !password" class="btn btn-primary">Registrieren</button>
+<div class="container py-3">
+  <div class="row">
+    <div class="col-2 col-sm-2 col-md-3 col-lg-4"></div>
+
+    <div class="col-8 col-sm-8 col-md-6 col-lg-4">
+
+      <form #signinForm="ngForm">
+
+        <div *ngIf="!(userLoggedIn|async)">
+
+          <div class="input-group margin-bottom-sm">
+            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+            <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email Adresse" id="email">
+          </div>
+
+          <div class="input-group">
+            <span class="input-group-addon">
+          <i class="fa fa-key fa-fw"></i>
+        </span>
+            <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Passwort" aria-describedby="help"
+              id="password">
+          </div>
+
+          <div class="py-3">
+            <button (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary" style="cursor: pointer;">
+          <i class="fa fa-sign-in"></i> Anmelden</button>
+            <button (click)="onSignup()" class="btn btn-primary" style="cursor: pointer;">
+          <i class="fa fa-user-plus"></i> Registrieren</button>
+          </div>
+        </div>
+      </form>
     </div>
-    <div *ngIf="user | async" class="form-group">
-      <h5>Willkommen {{ (user | async)?.email }}!</h5><br>
-      <h5>Deine UID: {{ (user | async)?.uid }}</h5><br>    
-      <button (click)="onLogout()" class="btn btn-danger">Logout</button>
-      <!-- <br> -->
-      <!-- <input type="text" class="form-control" [(ngModel)]="name" name="name" placeHolder="Namen ändern"> -->
-      <!-- <button (click)="onUpdateName()" [disabled]="!name">Update Name</button> -->
-      <!-- <p>Neuer Name: {{ player.name | async }}</p> -->
-    </div>
-  </form>
+    <div class="col-2 col-sm-8 col-md-3 col-lg-4"></div>
+  </div>
 </div>
