--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,45 +1,89 @@
-<nav class="navbar navbar-toggleable navbar-light bg-faded flex-row">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+
+  <!-- Brand -->
+  <a class="navbar-brand" routerLink="">
+    <img src="../../../assets/images/rww-logo.png" alt="Rot Weiß Walldorf Logo" class="d-inline-block"
+      width="40px" height="40px">
+  </a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <!-- Brand -->
-  <a class="navbar-brand" routerLink="">
-    <img src="http://mediadb.kicker.de/2016/fussball/vereine/xxl/8460_20150813515.png" alt="Rot Weiß Walldorf Logo" class="d-inline-block" width="40px" height="40px">
-  </a>
+
   <!-- Links -->
   <div class="collapse navbar-collapse" id="nav-content">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink=""><button class="btn btn-outline-danger">Home</button></a>
-      </li>
+
+    <!-- Ranking-Link -->
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="Preview" role="button" aria-haspopup="true" aria-expanded="false">
-          <button class="btn btn-outline-danger">Ranglisten</button>
+        <a class="nav-link" data-toggle="dropdown" id="Preview" role="button" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-outline-danger dropdown-toggle" style="cursor: pointer;">Ranglisten</button>
         </a>
         <div class="dropdown-menu dropdown-menu-left" aria-labelledby="Preview">
-          <a class="dropdown-item" [routerLink]="['ranking', 'men']"><i class="fa fa-male fa-fw" aria-hidden="true"></i>Männer</a>
-          <a class="dropdown-item" [routerLink]="['ranking', 'women']"><i class="fa fa-female fa-fw" aria-hidden="true"></i>Frauen</a>
+          <a class="dropdown-item" [routerLink]="['ranking', 'men']">
+            <i class="fa fa-male fa-fw" aria-hidden="true"></i>Männer</a>
+          <a class="dropdown-item" [routerLink]="['ranking', 'women']">
+            <i class="fa fa-female fa-fw" aria-hidden="true"></i>Frauen</a>
         </div>
       </li>
-       <li class="nav-item">
-        <a class="nav-link disabled" routerLink="/"><button class="btn btn-outline-danger">Statistiken</button></a>
-      </li> 
-    </ul>
-    <ul class="navbar-nav ml-auto">
+      <!-- Forderungen-Link -->
       <li class="nav-item">
-        <a class="nav-link" routerLink="signin">
-          <button class="btn btn-outline-success" type="button">Anmelden</button>
-        </a>        
-      </li> 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="SignIn" role="button" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+        <a class="nav-link" routerLink="active-challenges">
+          <button class="btn btn-outline-info">
+            Forderungen
+          </button>
         </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">          
-          <a class="dropdown-item" routerLink="signup"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren</a>
-          <a class="dropdown-item" routerLink="admin"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Admin</a>
-          <a class="dropdown-item" routerLink="signin/edit"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Edit Player (temporary)</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+
+      <!-- only visible if Player is logged in -->
+      <li class="nav-item" *ngIf="getAuthState() | async; let user; else showLogin">
+        <div class="nav-link btn-group">
+          <button class="btn btn-primary" type="button" routerLink="signin/edit" style="color: white; cursor: pointer">
+            <i class="fa fa-user fa-fw" style="color: white; cursor: pointer;"></i> {{ user.displayName }}
+          </button>
+          <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false" style="cursor: pointer;">
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li>
+              <a class="dropdown-item" style="cursor: pointer;" routerLink="/signin/edit">
+                <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Persönlicher Bereich</a>
+            </li>
+            <li>
+              <a class="dropdown-item" (click)="onLogout()" style="cursor: pointer;">
+                <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Logout</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+
+      <!-- only visible as guest -->
+      <ng-template #showLogin>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="signin">
+            <button class="btn btn-primary" style="cursor: pointer">
+              <i class="fa fa-sign-in"></i> Anmelden</button>
+          </a>
+        </li>
+      </ng-template>
+
+      <li class="nav-item">
+        <div class="nav-link">
+
+          <button class="btn btn-outline-danger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-cog fa-fw" aria-hidden="true"></i>
+          </button>
+
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">
+            <a class="dropdown-item" routerLink="signup">
+              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren</a>
+            <a class="dropdown-item" routerLink="players/list">
+              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Admin</a>
+          </div>
         </div>
       </li>
     </ul>
