--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,34 +1,38 @@
 <div class="container py-3">
   <div class="row">
-    <div class="col cs-12 col-sm-12 col-md-8">
+    <div class="col-2"></div>
+    <div class="col-xs-8 col-sm-12 col-md-8 col-lg-6">
       <h5 class="text-center" *ngIf="gender === 'men'">Rangliste Männer</h5>
       <h5 class="text-center" *ngIf="gender === 'women'">Rangliste Frauen</h5>
     </div>
+    <div class="col-2"></div>
   </div>
 
   <div class="row py-2">
-    <div class="col-xs-12 col-sm-12 col-md-8">
-      <table class="table table-striped table-hover table-sm">
+    <div class="col-2"></div>
+    <div class="col-xs-8 col-sm-12 col-md-8 col-lg-6">
+      <table class="table table-striped table-hover table-sm text-center">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Vorname</th>
-            <th>Nachname</th>
-            <th>Gefodert</th>
-            <th>Neutral.</th>
+            <th>Rang</th>
+            <th>Name</th>
+            <th>nächster Gegner</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let player of players | async | sortPlayers" class="table-row" style="cursor: pointer">
             <th scope="row">{{ player.rank }}</th>
-            <td>{{ player.firstName }}</td>
-            <td>{{ player.lastName }}</td>
-            <td class="text-center"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></td>
-            <td class="text-center"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></td>
+            <td>{{ player.firstName }} {{ player.lastName }}</td>
+            <td>
+              <i *ngIf="player.challenged === false" class="fa fa-times" aria-hidden="true"></i>
+              <div *ngIf="player.challenged === true">
+                {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
+              </div>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
-    
+    <div class="col-2"></div>
   </div>
 </div>
