--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
-
-body {
-    margin: 0;
-    font-family: Roboto, sans-serif;
-}
-
-md-card {
-    max-width: 80%;
-    margin: 2em auto;
-    text-align: center;
-}
-
-md-toolbar-row {
-    justify-content: space-between;
-}
 
 .done {
     position: fixed;
     bottom: 20px;
     right: 20px;
+}
+
+tr.table-row:hover {
+  background:lightcoral;
 }
