--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -16,7 +16,7 @@
       <div class="tab-content">
 
         <div class="tab-pane text-center active fade in show" id="home">
-          <h5>Badminton-Vereinsrangliste Rot-Weiss Walldorf</h5>
+          <h5>Badminton-Vereinsrangliste Rot-Weiss Walldorf (BETA)</h5>
           <img src="../../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo">
           <hr>
           <h5>Verwendete Technologien:</h5>
