--- a/src/app/players/player-detail/player-detail.component.html
+++ b/src/app/players/player-detail/player-detail.component.html
@@ -1,6 +1,6 @@
 <div class="col">
   <div class="list-group">
-    <button type="button" class="list-group-item list-group-item-action" (click)="toggleEditPlayer(player)" style="cursor: pointer">
+    <button type="button" class="list-group-item list-group-item-action" (click)="toggleEditPlayer()" style="cursor: pointer">
         <span class="badge badge-secondary text-white mr-4">{{ player.rank }}</span>{{ player.firstName }} {{ player.lastName }}
     </button>
   </div>
@@ -10,7 +10,7 @@
 <div class="row py-3" *ngIf="showEditArea">
   <div class="col-1"></div>
   <div class="col">
-    <form #updateForm="ngForm">
+    <form #updateForm="ngForm" (ngSubmit)="updatePlayer()">
       <div class="input-group">
         <span class="input-group-addon" id="fName">Vorname</span>
         <input type="text" class="form-control" placeholder="{{ player.firstName }}" id="firstName"
@@ -26,18 +26,14 @@
       </div>
       <div class="input-group">
         <span class="input-group-addon" id="rank">Rang</span>
-        <input type="text" class="form-control" placeholder="{{ player.rank }}" [(ngModel)]="player.rank" id="rank" name="rank">
+        <input type="number" class="form-control" placeholder="{{ player.rank }}" [(ngModel)]="player.rank" id="rank" name="rank">
       </div>
       <div class="input-group">
         <span class="input-group-addon">Geschlecht</span>
         <input type="text" class="form-control" placeholder="{{ player.gender }}" readonly>
-        <!-- <select name="gender" class="form-control" [(ngModel)]="player.gender" name="gender"> -->
-          <!-- <option value="male" [selected]="player.gender === 'male'">männlich</option> -->
-          <!-- <option value="female" [selected]="player.gender === 'female'">weiblich</option> -->
-        <!-- </select> -->
       </div>
       <div class="form-group py-2">
-        <button class="btn btn-outline-primary" (click)="updatePlayer()" style="cursor: pointer;">Aktualisieren</button>
+        <button type="submit" class="btn btn-outline-primary" style="cursor: pointer;">Aktualisieren</button>
         <!-- <button class="btn btn-danger float-right" (click)="removePlayer()" style="cursor: pointer;">Spieler löschen</button> -->
       </div>
     </form>
