--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -28,7 +28,7 @@
           </ol>
         </div>
 
-        <div class="tab-pane" id="rules">
+        <div class="tab-pane fade" id="rules">
           <p>Quelle: www.tv-badminton.de</p>
           <p>Das Ranglistensystem entspricht einem Tannenbaum und teilt die Ranglistenspieler/-innen in verschiedene Reihen
             ein. In der Reihe 1 steht die Nummer 1, in der Reihe 2 die Nummer 2 und 3, in der Reihe 3 die Nummer 4, 5 und
