--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,39 +1,58 @@
 <div class="container py-3">
+
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-xs-8 col-sm-12 col-md-8 col-lg-6">
-      <h5 class="text-center" *ngIf="gender === 'men'">Rangliste Männer</h5>
-      <h5 class="text-center" *ngIf="gender === 'women'">Rangliste Frauen</h5>
+    <div class="col-12 text-center">
+      <h5 *ngIf="gender === 'men'">Rangliste Männer</h5>
+      <h5 *ngIf="gender === 'women'">Rangliste Frauen</h5>
     </div>
-    <div class="col-2"></div>
   </div>
+
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Männer</a>
+    </li>
+    <li class="nav-item">
+      <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Frauen</a>
+    </li>
+  </ul>
 
   <div class="row py-2">
     <div class="col-2"></div>
     <div class="col-xs-8 col-sm-12 col-md-8 col-lg-6">
-      <table class="table table-striped table-hover table-sm text-center">
-        <thead>
-          <tr>
-            <th>Rang</th>
-            <th>Name</th>
-            <th>nächster Gegner</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let player of players | async | sortPlayers" class="table-row" style="cursor: pointer">
-            <th scope="row" *ngIf="player.rank != 999">{{ player.rank }}</th>
-            <th scope="row" *ngIf="player.rank == 999"><div class="text-info">OR*</div></th>
-            <td>{{ player.firstName }} {{ player.lastName }}</td>
-            <td>
-              <i *ngIf="player.challenged === false" class="fa fa-times" aria-hidden="true"></i>
-              <div *ngIf="player.challenged === true">
-                {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <small>*OR = ohne Rang</small>
+      <div class="tab-content">
+        <div class="tab-pane active fade in show" id="table">
+          <table class="table table-striped table-hover table-sm text-center">
+            <thead>
+              <tr>
+                <th>Rang</th>
+                <th>Name</th>
+                <th>anstehende Forderung</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let player of players | async | sortPlayers" class="table-row" style="cursor: pointer">
+                <th scope="row" *ngIf="player.rank < 999">{{ player.rank }}</th>
+                <th scope="row" *ngIf="player.rank === 999">
+                  <div class="text-info">OR*</div>
+                </th>
+                <th scope="row" *ngIf="player.rank === 9999">
+                  <div class="text-success">NEU*</div>
+                </th>
+                <td>{{ player.firstName }} {{ player.lastName }}</td>
+                <td>
+                  <i *ngIf="player.challenged === false" class="fa fa-times" aria-hidden="true"></i>
+                  <div *ngIf="player.challenged === true">
+                    {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <small>*OR = Ohne Rang: Dieser Spieler darf einen beliebigen Spieler fordern.</small>
+      <br>
+      <small>*NEU = Dieser Spieler hat sich kürzlich erst registriert und muss erst freigeschaltet werden.</small>
     </div>
     <div class="col-2"></div>
   </div>
